# Navneet

./: test
sf3-accounts/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  alembic.ini  main.py  pyproject.toml
sf3-accounts/deployments/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
sf3-accounts/src/api/dependencies/: get_db.py  logger.py
sf3-accounts/src/api/routes/v1/: customer.py  employee.py  health_check.py  player.py
sf3-accounts/src/constants/: constants.py
sf3-accounts/src/core/: config.py  gunicorn.conf.py
sf3-accounts/src/crud/: customer_crud.py  employee_crud.py  player_crud.py
sf3-accounts/src/database/: database.py
sf3-accounts/src/exception/: common_exception.py  customer_exception.py  employee_exception.py  player_exception.py
sf3-accounts/src/json/: get_customer.json  get_employee.json  list_employee.json  list_of_all_customers.json  list_of_players.json
sf3-accounts/src/schemas/: common_schema.py  customer_schema.py  employee_schema.py  player_schema.py
sf3-accounts/src/utils/: account_utils.py
sf3-accounts/tests/: test_config.py  test_healthcheck.py
