[tool.poetry]
name = "sf3-accounts"
version = "0.1.0"
description = ""
authors = ["Mamta Maloo <mamta.maloo@everestek.com.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
loguru = "^0.6.0"
toml = "^0.10.2"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.0"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
alembic = "^1.7.7"
PyMySQL = "^1.0.2"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
commitizen = "^2.24.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
